BUDGET/force-app/main/default/objects/Income_Source__c/Income_Source__c.object-meta.xml
<CustomObject>
    <label>Income Source</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>