BUDGET/force-app/main/default/objects/Income_Source__c/fields/Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Income_Frequency__c</fullName>
    <label>Income Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi annually</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>