BUDGET/force-app/main/default/objects/Income_Source__c/fields/Income_Name__c.field-meta.xml
<CustomField>
    <fullName>Income_Name__c</fullName>
    <label>Income Name</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>