BUDGET/force-app/main/default/objects/Income_Source__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <formula>CASE(
TEXT(Income_Frequency__c),
&quot;Monthly&quot;, Income_Amount__c,
&quot;Quarterly&quot;, Income_Amount__c / 3,
&quot;Bi annually&quot;, Income_Amount__c / 6,
&quot;Yearly&quot;, Income_Amount__c / 12,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>