BUDGET/force-app/main/default/objects/Income_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Income_Name__c</columns>
    <columns>Income_Type__c</columns>
    <columns>Income_Frequency__c</columns>
    <columns>Income_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>